fix(slider): correct outline size on focus, fix clipping in fx

--- a/npm/designsystem/src/components/Slider/styles.module.scss
+++ b/npm/designsystem/src/components/Slider/styles.module.scss
@@ -43,9 +43,10 @@
     z-index: 9;
     outline: none;
     cursor: pointer;
+    transform: scale(1);
 
     &:focus-within {
-      box-shadow: 0 0 0 0.1rem $black;
+      box-shadow: 0 0 0 0.15rem $black;
     }
 
     &::after {
